Fix issuew with tag spacing

--- a/css/main.css
+++ b/css/main.css
@@ -237,8 +237,8 @@ Taggable
     background: yellow;
     color: #001429;
     text-align: center;
-    padding: 3px 18px 3px 10px;
-    margin-right: 5px;
+    padding: 0 18px 0 10px;
+    margin: 0 5px 0 0;
 }
 
 .tag:after {
